[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/resource_importer/Main-Window.gd" type="Script" id=1]

[node name="Control" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainView" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorPath" type="HBoxContainer" parent="MainView"]
margin_left = 188.0
margin_top = 239.0
margin_right = 827.0
margin_bottom = 263.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MainView/EditorPath"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Editor Path:"

[node name="LineEdit" type="LineEdit" parent="MainView/EditorPath"]
margin_left = 77.0
margin_right = 577.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
text = "/home/jean/Libre-TrainSim-Editor/"
caret_blink = true
caret_blink_speed = 0.5

[node name="Update" type="Button" parent="MainView/EditorPath"]
margin_left = 581.0
margin_right = 639.0
margin_bottom = 24.0
text = "Update"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportResources" type="Button" parent="MainView"]
margin_left = 438.0
margin_top = 267.0
margin_right = 577.0
margin_bottom = 287.0
size_flags_horizontal = 4
text = "1. Import resources"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WriteToEditorDirectory" type="Button" parent="MainView"]
margin_left = 416.0
margin_top = 291.0
margin_right = 599.0
margin_bottom = 311.0
size_flags_horizontal = 4
text = "2. Write to editor directory"

[node name="Quit" type="Button" parent="MainView"]
margin_left = 488.0
margin_top = 315.0
margin_right = 528.0
margin_bottom = 335.0
size_flags_horizontal = 4
text = "Quit"

[node name="Label" type="Label" parent="MainView"]
margin_left = 508.0
margin_top = 339.0
margin_right = 508.0
margin_bottom = 353.0
size_flags_horizontal = 4

[connection signal="pressed" from="MainView/EditorPath/Update" to="." method="_on_UpdateEditorPath_pressed"]
[connection signal="pressed" from="MainView/ImportResources" to="." method="_on_ImportResources_pressed"]
[connection signal="pressed" from="MainView/WriteToEditorDirectory" to="." method="_on_WriteToEditorDirectory_pressed"]
[connection signal="pressed" from="MainView/Quit" to="." method="_on_Quit_pressed"]
